--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,12 @@ error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
+
     worker_connections  1024;
 }
 
 http {
+
     include       mime.types;
     default_type  application/octet-stream;
     send_timeout 1800;
@@ -16,18 +18,20 @@ http {
     keepalive_timeout  6500;
     log_format upstream_time '"$request" $status $body_bytes_sent ';
 
-    upstream backend {
-        server localhost:3000;
-    }
+  #  ssl_certificate     common.crt;
+  #  ssl_certificate_key common.key;
 
-    root /home/chaiya/station_opz/build;
-    index index.html;
-
+# HTTP // HTTPS
     server {
 
+        listen              [::]:80 default_server ipv6only=on;
+        listen              [::]:443 ssl default_server ipv6only=on;
+        listen              80;
+        listen              443 ssl;
+    
+        server_name  _;
+
         access_log /var/log/nginx-access.log upstream_time;
-        listen       80;
-        server_name  localhost;
 
         location / {
          proxy_pass http://localhost:3000;
@@ -60,14 +64,7 @@ http {
         location  /gov {
          rewrite ^(/.*)$ / redirect;
         }
-	location /wrong/url {
-         return 404;
-      }
-      
-      location /users/ {
-         rewrite ^/users/(.*)$ /show?user=$1 break;
-      }
- 
 
     }
+
 }
